@@ -138,172 +138,6 @@ bool NTriangulation::stretchForestFromVertex(NVertex* from,
     return false;
 }
 
-bool NTriangulation::crushMaximalForest() {
-    // First obtain a maximal forest in the 1-skeleton.
-    stdhash::hash_set<NEdge*, HashPointer> cEdges;
-    maximalForestInSkeleton(cEdges, false);
-
-    /* --- DEBUGGING OUTPUT ---
-    {
-        stdhash::hash_set<NFace*, HashPointer> dual;
-        maximalForestInDualSkeleton(dual);
-        cerr << "Dual Faces: " << dual.size() << '\n';
-        NPointerSetIterator<NFace> it(dual);
-        while (! it.done()) {
-            cerr << faceIndex(*it) << ' ';
-            it++;
-        }
-        cerr << '\n';
-    }
-
-    cerr << "Edges going: " << cEdges.size() << '\n';
-    {
-        NPointerSetIterator<NEdge> it(cEdges);
-        while (! it.done()) {
-            cerr << edgeIndex(*it) << ' ';
-            it++;
-        }
-        cerr << '\n';
-    }
-    ------------------------*/
-
-    stdhash::hash_set<NTetrahedron*, HashPointer> cTetrahedra;
-
-    // Extend this list of collapsings to faces.
-    NTetrahedron* tet;
-    TetrahedronIterator tit;
-    int face, edge;
-    int nLost;
-    bool changed = true;
-    while (changed) {
-        changed = false;
-        for (tit = tetrahedra.begin(); tit != tetrahedra.end(); tit++) {
-            tet = *tit;
-            for (face = 0; face < 4; face++) {
-                nLost = 0;
-                for (edge = 0; edge < 6; edge++) {
-                    if (NEdge::edgeVertex[edge][0] == face ||
-                            NEdge::edgeVertex[edge][1] == face)
-                        continue;
-                    if (cEdges.count(tet->getEdge(edge)))
-                        nLost++;
-                }
-                // Changed > 1 below to == 2 since we're not storing
-                // faces.
-                if (nLost == 2) {
-                    for (edge = 0; edge < 6; edge++) {
-                        if (NEdge::edgeVertex[edge][0] == face ||
-                                NEdge::edgeVertex[edge][1] == face)
-                            continue;
-                        cEdges.insert(tet->getEdge(edge));
-                    }
-                    changed = true;
-                }
-            }
-        }
-    }
-
-    // Finally extend this list to tetrahedra.
-    for (tit = tetrahedra.begin(); tit != tetrahedra.end(); tit++) {
-        tet = *tit;
-        for (edge = 0; edge < 6; edge++)
-            if (cEdges.count(tet->getEdge(edge))) {
-                cTetrahedra.insert(tet);
-                break;
-            }
-    }
-
-    // Are we going to change anything?
-    if (cTetrahedra.empty())
-        return false;
-
-    ChangeEventBlock block(this);
-
-    // Prepare to measure the change in topology.
-    /*
-    const NAbelianGroup& h1(getHomologyH1());
-    unsigned long oldComponents = components.size();
-    unsigned long oldRank = h1.getRank();
-    unsigned long oldRank2 = h1.getTorsionRank(2);
-    unsigned long oldRank3 = h1.getTorsionRank(3);
-    */
-
-    // Reglue the surviving tetrahedra.
-    NTetrahedron* adjTet;
-    NTetrahedron* tmpTet;
-    NPerm adjPerm;
-    int adjFace, edgeFrom;
-    for (tit = tetrahedra.begin(); tit != tetrahedra.end(); tit++) {
-        tet = *tit;
-        if (! cTetrahedra.count(tet))
-            for (face = 0; face < 4; face++) {
-                adjTet = tet->adjacentTetrahedron(face);
-                if (adjTet == 0)
-                    continue;
-                if (! cTetrahedra.count(adjTet))
-                    continue;
-                adjPerm = tet->adjacentGluing(face);
-                adjFace = adjPerm[face];
-                while(1) {
-                    // Follow through to the next face.
-                    for (edgeFrom = 0; edgeFrom < 4; edgeFrom++) {
-                        if (edgeFrom == adjFace)
-                            continue;
-                        if (! (cEdges.count(adjTet->
-                                getEdge(NEdge::edgeNumber[adjFace][edgeFrom]))))
-                            continue;
-                        break;
-                    }
-                    // Follow edge from edgeFrom to adjFace.
-                    // The face of adjTet we now move to is edgeFrom.
-                    tmpTet = adjTet->adjacentTetrahedron(edgeFrom);
-                    if (tmpTet == 0) {
-                        // Make the original face a boundary face.
-                        tet->unjoin(face);
-                        break;
-                    }
-                    adjPerm = adjTet->adjacentGluing(edgeFrom) *
-                        NPerm(adjFace, edgeFrom) * adjPerm;
-                    adjFace = adjPerm[face];
-                    adjTet = tmpTet;
-
-                    if (! (cTetrahedra.count(adjTet))) {
-                        // Glue the original face to this safe
-                        // tetrahedron.
-                        tet->unjoin(face);
-                        adjTet->unjoin(adjFace);
-                        tet->joinTo(face, adjTet, adjPerm);
-                        break;
-                    }
-                }
-            }
-    }
-
-    // Remove the squished tetrahedra.
-    // For each tetrahedron, remove it and delete it.
-    for (stdhash::hash_set<NTetrahedron*, HashPointer>::iterator tetIt =
-            cTetrahedra.begin(); tetIt != cTetrahedra.end(); tetIt++) {
-        tetrahedra.erase(tetrahedra.begin() + tetrahedronIndex(*tetIt));
-        delete *tetIt;
-    }
-
-    // Tidy up.
-    gluingsHaveChanged();
-
-    // Measure the change in topology.
-    /*
-    const NAbelianGroup& newH1 = getHomologyH1();
-    extraTopology = extraTopology + NExtraTopology(
-        components.size() - oldComponents,
-        oldRank - newH1.getRank(),
-        oldRank3 - newH1.getTorsionRank(3),
-        oldRank2 - newH1.getTorsionRank(2)
-        );
-    */
-
-    return true;
-}
-
 void NTriangulation::maximalForestInDualSkeleton(
         stdhash::hash_set<NFace*, HashPointer>& faceSet) const {
     if (! calculatedSkeleton)
